B&L QA/objects/Report_Product_Complaint__c.object
<CustomObject>
    <description>Tool for field users to report product complaints via their mobile device, which are then routed to the appropriate email address to be logged in CATSWEB. 
(Reuse of DASRX object - used to be Pharma Covigilance). 
Used by EMEA SU.</description>
    <fields>
        <fullName>Additional_Medical_Intervention_Required__c</fullName>
        <description>Adverse Event. Used by EMEA SU.</description>
        <inlineHelpText>Adverse Event.</inlineHelpText>
        <label>Additional Medical Intervention Required</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_complaint__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_of_Patient__c</fullName>
        <label>Age of Patient</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <description>EMEASU</description>
        <label>Contact Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Email__c</fullName>
        <description>Used by EMEA SU.</description>
        <formula>Contact__r.Phone &amp; &apos;, &apos; &amp; HYPERLINK( &apos;mailto:&apos; &amp; Contact__r.Email, &apos;Email &apos; &amp; Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone &amp; Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>EMEASU</description>
        <label>Department for Collection</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual at the customer who reported the complaint to B&amp;L. Used by EMEA SU.</description>
        <label>Complaint Originator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Report Product Complaints</relationshipLabel>
        <relationshipName>Report_Product_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pharma_Covigilance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Report_Received__c</fullName>
        <inlineHelpText>Enter date when doctor reported event</inlineHelpText>
        <label>Date Report Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <inlineHelpText>Please enter the date when the event occurred</inlineHelpText>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please enter a description of the event and the patient&apos;s reactions</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Report_Required__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Evaluation Report Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, to customer</fullName>
                </value>
                <value>
                    <fullName>To B+L Representative</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_of_Patient__c</fullName>
        <inlineHelpText>Please select a gender for the patient</inlineHelpText>
        <label>Gender of Patient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                    <default>true</default>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>EMEA SU free text field for entering product code/ details for a product complaint</description>
        <label>Product Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Returned__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Product Returned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product discarded by customer</fullName>
                </value>
                <value>
                    <fullName>Product to be returned by customer (non-contaminated only)</fullName>
                </value>
                <value>
                    <fullName>Product to be returned by TM (non-contaminated only)</fullName>
                </value>
                <value>
                    <fullName>Please arrange Collection (contaminated)</fullName>
                </value>
                <value>
                    <fullName>Please arrange Collection (non-contaminated)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacement_Product_Required__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Replacement Product Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_form_to__c</fullName>
        <description>Email address to send the adverse event form to. EMEA SU.</description>
        <inlineHelpText>You must enter an email address if an adverse event form is required.</inlineHelpText>
        <label>Send adverse event form to</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_complaint__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Type of complaint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Patient Impact / No Product Returned</fullName>
                </value>
                <value>
                    <fullName>No Patient Impact / Product Returned</fullName>
                </value>
                <value>
                    <fullName>Patient Impact / No Product Returned</fullName>
                </value>
                <value>
                    <fullName>Patient Impact / Product Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Report Product Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Product Complaint Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Product Complaints</pluralLabel>
    <recordTypes>
        <fullName>EMEA_SU_Complaint</fullName>
        <active>true</active>
        <description>Recordtype for EMEA Surgical Product Complaints</description>
        <label>EMEA SU Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_UK_SU_Complaint</fullName>
        <active>true</active>
        <description>Recordtype for EMEA UK Surgical Product Complaints</description>
        <label>EMEA UK SU Complaint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_is_Required_For_Adverse_Event_Form</fullName>
        <active>true</active>
        <description>If adverse event report is required then an email address must be entered.</description>
        <errorConditionFormula>IF( AND ($RecordType.Name = &apos;EMEA SU Complaint&apos;, OR(ISPICKVAL( Type_of_complaint__c , &apos;Patient Impact / No Product Returned&apos;),ISPICKVAL( Type_of_complaint__c , &apos;Patient Impact / Product Returned&apos;)), Send_form_to__c = &apos;&apos; ) , true, false)</errorConditionFormula>
        <errorMessage>If an adverse event form is needed, you must provide an email address to mail it to.</errorMessage>
    </validationRules>
</CustomObject>